# browser-ops

./: .gitignore  ACCEPTANCE_REPORT.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SKILL.md  demo.sh  install.sh  pyproject.toml  requirements.txt
.github/: release.yml
browser_ops/: __init__.py  cli.py
docs/: architecture.md  demo-showcase.md  openclaw-skill-install.md  site-connectivity-adapter.md  workflow.md
references/: action-policy-layer.md  artifacts-and-failures.md  autopilot-mode.md  browser-execution-loop.md  browser-handoff-payload.md  consent-aware-interaction-policy.md  deep-analysis.md  demo-showcase.md  detail-batch-loop.md  detail-enrichment-loop.md  device-profiles.md  extraction-patterns.md  failure-recovery-system.md  human-collab-real-device-mode.md  intelligence-first-flow.md  orchestrator-flow.md  pagination-loop.md  real-browser-demo.md  runbook-mode.md  safety-boundaries.md  site-intelligence.md  site-profile-template.md  strategy.md  workflow-recipes.md
scripts/: action_policy_engine.py  artifact_recorder.py  autopilot_tick.py  browser_detail_processor.py  browser_extract_from_snapshot.py  browser_handoff_payload.py  browser_human_mode.py  browser_next_step.py  browser_ops_orchestrator.py  browser_page_processor.py  browser_plan_builder.py  browser_runbook_builder.py  browser_state_driver.py  build_clean_package.py  cli.py  consent_prompt_rewriter.py  crawl_orchestrator.py  deep_analysis_engine.py  deep_report_builder.py  detail_batch_driver.py  detail_queue_builder.py  device_profile_manager.py  doctor.py  extractors.py  failure_recovery_engine.py  handoff_packet.py  hn_demo_setup.py  http_crawler.py  intelligence_bootstrap.py  package_release.py  (+11 more)
(+59 files in other folders)
